[package]
name = "godot-zenoh"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = {git = "https://github.com/godot-rust/gdext.git", features = ["api-4-5", "experimental-threads"]}

zenoh = "1.7.2"
uhlc = "0.8.2"

tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
rstest = "0.26"
proptest = "1.0"

[features]
default = []
