[package]
name = "godot-zenoh"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "server_test"
path = "src/bin/server_test.rs"

[dependencies]
godot = {git = "https://github.com/godot-rust/gdext.git", features = ["api-4-4", "experimental-threads", "register-docs"]}
zenoh = "1.7.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# NEVER USE uhlc

[dev-dependencies]
rstest = "0.26"
proptest = "1.0"

[features]
default = []