[package]
name = "godot-zenoh"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zenoh_cli_test"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
godot = {git = "https://github.com/godot-rust/gdext.git", features = ["api-4-4", "experimental-threads", "register-docs"]}
zenoh = "1.7.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
# NEVER USE uhlc

[dev-dependencies]
rstest = "0.26"
proptest = "1.0"
uhlc = "0.8.2"  # For timestamp testing
rand = "0.8"

[features]
default = []

